@@ -1,72 +1,89 @@
+# BEGIN PLOT /MC_TTBAR/jet.?_[1234]_pT
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
+LogX=1
+# END PLOT
+
 # BEGIN PLOT /MC_TTBAR/jet_1_pT
 Title=Transverse momentum distribution for jet 1
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jet_2_pT
 Title=Transverse momentum distribution for jet 2
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jet_3_pT
 Title=Transverse momentum distribution for jet 3
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jet_4_pT
 Title=Transverse momentum distribution for jet 4
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jet_HT
 Title=$H_T$ distribution for all jets
 XLabel=$H_T$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}H_T$ [GeV$^-1$]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}H_T$ [GeV$^{-1}$]
 LogX=1
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jetb_1_pT
 Title=Transverse momentum distribution for $b$-jet 1
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jetb_2_pT
 Title=Transverse momentum distribution for $b$-jet 2
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
-#
+
 # BEGIN PLOT /MC_TTBAR/jetl_1_pT
 Title=Transverse momentum distribution for light jet 1
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/jetl_2_pT
 Title=Transverse momentum distribution for light jet 2
-XLabel=$p_\perp$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^-1$]
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/W_mass
 Title=Mass distribution for $W$ bosons
 XLabel=$m_{jj}$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{jj}$ [GeV$^-1$]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{jj}$ [GeV$^{-1}$]
+LogY=0
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/t_mass
 Title=Mass distribution for reconstructed top
-XLabel=$m_{q\bar{q}b$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{q\bar{q}b}$ [GeV$^-1$]
+XLabel=$m_{q\bar{q}b}$ [GeV]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{q\bar{q}b}$ [GeV$^{-1}$]
+LogY=0
 # END PLOT
 
 # BEGIN PLOT /MC_TTBAR/t_mass_W_cut
 Title=Mass distribution for reconstructed top after $m_W$ cut
-XLabel=$m_{q\bar{q}b$ [GeV]
-YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{q\bar{q}b}$ [GeV$^-1$]
+XLabel=$m_{q\bar{q}b}$ [GeV]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m_{q\bar{q}b}$ [GeV$^{-1}$]
+LogY=0
 # END PLOT
+
+# BEGIN PLOT /MC_TTBAR/.*_mass
+XLabel=$m$ [GeV]
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}m$ [GeV$^{-1}$]
+# END PLOT
+
+# BEGIN PLOT /MC_TTBAR/.*_dR
+XLabel=$\Delta R$
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}\Delta R$
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /MC_TTBAR/.*_deta
+XLabel=$\Delta \eta$
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}\Delta \eta$
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /MC_TTBAR/.*_dphi
+XLabel=$\Delta \phi$
+YLabel=$1/\sigma \, \mathrm{d}\sigma/\mathrm{d}\Delta \phi$
+LogY=0
+# END PLOT
+
